Paging listing in website

--- a/BaoDatShop/BaoDatShop.Web/app/components/product_categories/productCategoryListView.html
+++ b/BaoDatShop/BaoDatShop.Web/app/components/product_categories/productCategoryListView.html
@@ -54,7 +54,7 @@
       </div>
     </div><!-- /.box-body -->
     <div class="box-footer">
-
+      <pager-directive page="{{page}}" custom-path="{{customPath}}" pages-count="{{pagesCount}}" total-count="{{totalCount}}" search-func="getProductCagories(page)"></pager-directive>
     </div><!-- /.box-footer-->
   </div><!-- /.box -->
 </section><!-- /.content -->
