Search data product page

--- a/BaoDatShop/BaoDatShop.Web/app/components/product_categories/productCategoryListView.html
+++ b/BaoDatShop/BaoDatShop.Web/app/components/product_categories/productCategoryListView.html
@@ -22,6 +22,16 @@
       </div>
     </div>
     <div class="box-body">
+      <di class="row">
+        <div class="col-md-6">
+          <div class="input-group">
+            <input type="text" class="form-control" ng-model="keyword" placeholder="Từ khóa">
+            <span class="input-group-btn">
+              <button class="btn btn-default" type="button" ng-click="search()">Tìm kiếm</button>
+            </span>
+          </div><!-- /input-group -->
+        </div>
+      </di>
       <div class="row">
         <div class="col-md-12">
           <table class="table table-bordered">
@@ -49,6 +59,11 @@
                 <button class="btn  btn-sm btn-danger"><i class="fa fa-trash"></i></button>
               </td>
             </tr>
+            <tfoot>
+              <tr>
+                <td colspan="5">Tổng số bản ghi: {{totalCount}}</td>
+              </tdr>
+            </tfoot>
           </table>
         </div>
       </div>
