--- a/BaoDatShop/BaoDatShop.Web/app/components/product_categories/productCategoryListView.html
+++ b/BaoDatShop/BaoDatShop.Web/app/components/product_categories/productCategoryListView.html
@@ -61,8 +61,8 @@
             </tr>
             <tfoot>
               <tr>
-                <td colspan="5">Tổng số bản ghi: {{totalCount}}</td>
-              </tdr>
+                <td colspan="5"><span class="pull-right">Trang: {{page+1}} - Tổng số bản ghi: {{totalCount}}</span></td>
+              </tr>
             </tfoot>
           </table>
         </div>
