--- a/BaoDatShop/BaoDatShop.Web/Views/Admin/Index.cshtml
+++ b/BaoDatShop/BaoDatShop.Web/Views/Admin/Index.cshtml
@@ -516,6 +516,7 @@
   <script src="~/Assets/admin/libs/angular/angular.js"></script>
   <script src="~/Assets/admin/libs/angular-ui-router/release/angular-ui-router.js"></script>
   <script src="~/Assets/admin/libs/toastr/toastr.js"></script>
+
   <script src="~/app/shared/modules/baodatshop.common.js"></script>
   <script src="~/app/shared/filters/statusFilter.js"></script>
   <script src="~/app/shared/services/apiService.js"></script>
@@ -525,6 +526,7 @@
   <script src="~/app/components/product_categories/productCategories.module.js"></script>
   <script src="~/app/app.js"></script>
   <script src="~/app/components/product_categories/productCategoryListController.js"></script>
+  <script src="~/app/components/product_categories/productCategoryAddController.js"></script>
   <script src="~/app/components/products/productAddController.js"></script>
   <script src="~/app/components/products/productListController.js"></script>
   <script src="~/app/components/home/homeController.js"></script>
