--- a/BaoDatShop/BaoDatShop.Web/app/components/product_categories/productCategoryListView.html
+++ b/BaoDatShop/BaoDatShop.Web/app/components/product_categories/productCategoryListView.html
@@ -31,6 +31,9 @@
             </span>
           </div><!-- /input-group -->
         </div>
+        <div class="col-md-6">
+          <button class="btn btn-success" ui-sref="add_product_category">Thêm mới</button>
+        </div>
       </di>
       <div class="row">
         <div class="col-md-12">
