--- a/BaoDatShop/BaoDatShop.Web/Views/Admin/Index.cshtml
+++ b/BaoDatShop/BaoDatShop.Web/Views/Admin/Index.cshtml
@@ -15,6 +15,7 @@
   <!-- Theme style -->
   <link href="~/Assets/admin/libs/toastr/toastr.css" rel="stylesheet" />
   <link rel="stylesheet" href="/Assets/admin/css/AdminLTE.min.css">
+  <link href="~/Assets/admin/css/custom.css" rel="stylesheet" />
   <!-- AdminLTE Skins. Choose a skin from the css/skins
        folder instead of downloading all of them to reduce the load. -->
   <link rel="stylesheet" href="/Assets/admin/css/skins/_all-skins.min.css">
@@ -522,12 +523,14 @@
   <script src="~/app/shared/services/apiService.js"></script>
   <script src="~/app/shared/directives/pagerDirective.js"></script>
   <script src="~/app/shared/services/notificationService.js"></script>
+  <script src="~/app/shared/services/commonService.js"></script>
   <script src="~/app/components/products/products.module.js"></script>
   <script src="~/app/components/product_categories/productCategories.module.js"></script>
   <script src="~/app/app.js"></script>
   <script src="~/app/components/product_categories/productCategoryListController.js"></script>
   <script src="~/app/components/product_categories/productCategoryAddController.js"></script>
   <script src="~/app/components/products/productAddController.js"></script>
+  <script src="~/app/components/product_categories/productCategoryEditController.js"></script>
   <script src="~/app/components/products/productListController.js"></script>
   <script src="~/app/components/home/homeController.js"></script>
 
