--- a/BaoDatShop/BaoDatShop.Web/app/components/product_categories/productCategoryListView.html
+++ b/BaoDatShop/BaoDatShop.Web/app/components/product_categories/productCategoryListView.html
@@ -58,7 +58,7 @@
                 </span>
               </td>
               <td>
-                <button class="btn btn-sm btn-primary"><i class="fa fa-pencil"></i></button>
+                <button class="btn btn-sm btn-primary" ui-sref="edit_product_category({id:item.ID})"><i class="fa fa-pencil"></i></button>
                 <button class="btn  btn-sm btn-danger"><i class="fa fa-trash"></i></button>
               </td>
             </tr>
