--- a/BaoDatShop/BaoDatShop.Web/Views/Shared/Layouts.cshtml
+++ b/BaoDatShop/BaoDatShop.Web/Views/Shared/Layouts.cshtml
@@ -27,215 +27,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
   <div class="container">
     @RenderBody()
   </div>
-  </a>
-  <!---->
-  <div class="shoes-grid-left">
-    <a href="single.html">
-      <div class="col-md-6 con-sed-grid">
+  @RenderSection("homeProducts", required: false)
 
-        <div class="elit-grid">
-
-          <h4>consectetur  elit</h4>
-          <label>FOR ALL PURCHASE VALUE</label>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, </p>
-          <span class="on-get">GET NOW</span>
-        </div>
-        <img class="img-responsive shoe-left" src="/Assets/client/images/sh.jpg" alt=" " />
-
-        <div class="clearfix"> </div>
-
-      </div>
-    </a>
-    <a href="single.html">
-      <div class="col-md-6 con-sed-grid sed-left-top">
-        <div class="elit-grid">
-          <h4>consectetur  elit</h4>
-          <label>FOR ALL PURCHASE VALUE</label>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, </p>
-          <span class="on-get">GET NOW</span>
-        </div>
-        <img class="img-responsive shoe-left" src="/Assets/client/images/wa.jpg" alt=" " />
-
-        <div class="clearfix"> </div>
-      </div>
-    </a>
-  </div>
-  <div class="products">
-    <h5 class="latest-product">LATEST PRODUCTS</h5>
-    <a class="view-all" href="product.html">VIEW ALL<span> </span></a>
-  </div>
-  <div class="product-left">
-    <div class="col-md-4 chain-grid">
-      <a href="single.html"><img class="img-responsive chain" src="/Assets/client/images/ch.jpg" alt=" " /></a>
-      <span class="star"> </span>
-      <div class="grid-chain-bottom">
-        <h6><a href="single.html">Lorem ipsum dolor</a></h6>
-        <div class="star-price">
-          <div class="dolor-grid">
-            <span class="actual">300$</span>
-            <span class="reducedfrom">400$</span>
-            <span class="rating">
-              <input type="radio" class="rating-input" id="rating-input-1-5" name="rating-input-1">
-              <label for="rating-input-1-5" class="rating-star1"> </label>
-              <input type="radio" class="rating-input" id="rating-input-1-4" name="rating-input-1">
-              <label for="rating-input-1-4" class="rating-star1"> </label>
-              <input type="radio" class="rating-input" id="rating-input-1-3" name="rating-input-1">
-              <label for="rating-input-1-3" class="rating-star"> </label>
-              <input type="radio" class="rating-input" id="rating-input-1-2" name="rating-input-1">
-              <label for="rating-input-1-2" class="rating-star"> </label>
-              <input type="radio" class="rating-input" id="rating-input-1-1" name="rating-input-1">
-              <label for="rating-input-1-1" class="rating-star"> </label>
-            </span>
-          </div>
-          <a class="now-get get-cart" href="#">ADD TO CART</a>
-          <div class="clearfix"> </div>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-4 chain-grid">
-      <a href="single.html"><img class="img-responsive chain" src="/Assets/client/images/ba.jpg" alt=" " /></a>
-      <span class="star"> </span>
-      <div class="grid-chain-bottom">
-        <h6><a href="single.html">Lorem ipsum dolor</a></h6>
-        <div class="star-price">
-          <div class="dolor-grid">
-            <span class="actual">300$</span>
-            <span class="reducedfrom">400$</span>
-            <span class="rating">
-              <input type="radio" class="rating-input" id="rating-input-1-5" name="rating-input-1">
-              <label for="rating-input-1-5" class="rating-star1"> </label>
-              <input type="radio" class="rating-input" id="rating-input-1-4" name="rating-input-1">
-              <label for="rating-input-1-4" class="rating-star1"> </label>
-              <input type="radio" class="rating-input" id="rating-input-1-3" name="rating-input-1">
-              <label for="rating-input-1-3" class="rating-star"> </label>
-              <input type="radio" class="rating-input" id="rating-input-1-2" name="rating-input-1">
-              <label for="rating-input-1-2" class="rating-star"> </label>
-              <input type="radio" class="rating-input" id="rating-input-1-1" name="rating-input-1">
-              <label for="rating-input-1-1" class="rating-star"> </label>
-            </span>
-          </div>
-          <a class="now-get get-cart" href="#">ADD TO CART</a>
-          <div class="clearfix"> </div>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-4 chain-grid grid-top-chain">
-      <a href="single.html"><img class="img-responsive chain" src="/Assets/client/images/bo.jpg" alt=" " /></a>
-      <span class="star"> </span>
-      <div class="grid-chain-bottom">
-        <h6><a href="single.html">Lorem ipsum dolor</a></h6>
-        <div class="star-price">
-          <div class="dolor-grid">
-            <span class="actual">300$</span>
-            <span class="reducedfrom">400$</span>
-            <span class="rating">
-              <input type="radio" class="rating-input" id="rating-input-1-5" name="rating-input-1">
-              <label for="rating-input-1-5" class="rating-star1"> </label>
-              <input type="radio" class="rating-input" id="rating-input-1-4" name="rating-input-1">
-              <label for="rating-input-1-4" class="rating-star1"> </label>
-              <input type="radio" class="rating-input" id="rating-input-1-3" name="rating-input-1">
-              <label for="rating-input-1-3" class="rating-star"> </label>
-              <input type="radio" class="rating-input" id="rating-input-1-2" name="rating-input-1">
-              <label for="rating-input-1-2" class="rating-star"> </label>
-              <input type="radio" class="rating-input" id="rating-input-1-1" name="rating-input-1">
-              <label for="rating-input-1-1" class="rating-star"> </label>
-            </span>
-          </div>
-          <a class="now-get get-cart" href="#">ADD TO CART</a>
-          <div class="clearfix"> </div>
-        </div>
-      </div>
-    </div>
-    <div class="clearfix"> </div>
-  </div>
-  <div class="products">
-    <h5 class="latest-product">LATEST PRODUCTS</h5>
-    <a class="view-all" href="product.html">VIEW ALL<span> </span></a>
-  </div>
-  <div class="product-left">
-    <div class="col-md-4 chain-grid">
-      <a href="single.html"><img class="img-responsive chain" src="/Assets/client/images/bott.jpg" alt=" " /></a>
-      <span class="star"> </span>
-      <div class="grid-chain-bottom">
-        <h6><a href="single.html">Lorem ipsum dolor</a></h6>
-        <div class="star-price">
-          <div class="dolor-grid">
-            <span class="actual">300$</span>
-            <span class="reducedfrom">400$</span>
-            <span class="rating">
-              <input type="radio" class="rating-input" id="rating-input-1-5" name="rating-input-1">
-              <label for="rating-input-1-5" class="rating-star1"> </label>
-              <input type="radio" class="rating-input" id="rating-input-1-4" name="rating-input-1">
-              <label for="rating-input-1-4" class="rating-star1"> </label>
-              <input type="radio" class="rating-input" id="rating-input-1-3" name="rating-input-1">
-              <label for="rating-input-1-3" class="rating-star"> </label>
-              <input type="radio" class="rating-input" id="rating-input-1-2" name="rating-input-1">
-              <label for="rating-input-1-2" class="rating-star"> </label>
-              <input type="radio" class="rating-input" id="rating-input-1-1" name="rating-input-1">
-              <label for="rating-input-1-1" class="rating-star"> </label>
-            </span>
-          </div>
-          <a class="now-get get-cart" href="#">ADD TO CART</a>
-          <div class="clearfix"> </div>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-4 chain-grid">
-      <a href="single.html"><img class="img-responsive chain" src="/Assets/client/images/bottle.jpg" alt=" " /></a>
-      <span class="star"> </span>
-      <div class="grid-chain-bottom">
-        <h6><a href="single.html">Lorem ipsum dolor</a></h6>
-        <div class="star-price">
-          <div class="dolor-grid">
-            <span class="actual">300$</span>
-            <span class="reducedfrom">400$</span>
-            <span class="rating">
-              <input type="radio" class="rating-input" id="rating-input-1-5" name="rating-input-1">
-              <label for="rating-input-1-5" class="rating-star1"> </label>
-              <input type="radio" class="rating-input" id="rating-input-1-4" name="rating-input-1">
-              <label for="rating-input-1-4" class="rating-star1"> </label>
-              <input type="radio" class="rating-input" id="rating-input-1-3" name="rating-input-1">
-              <label for="rating-input-1-3" class="rating-star"> </label>
-              <input type="radio" class="rating-input" id="rating-input-1-2" name="rating-input-1">
-              <label for="rating-input-1-2" class="rating-star"> </label>
-              <input type="radio" class="rating-input" id="rating-input-1-1" name="rating-input-1">
-              <label for="rating-input-1-1" class="rating-star"> </label>
-            </span>
-          </div>
-          <a class="now-get get-cart" href="#">ADD TO CART</a>
-          <div class="clearfix"> </div>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-4 chain-grid grid-top-chain">
-      <a href="single.html"><img class="img-responsive chain" src="/Assets/client/images/baa.jpg" alt=" " /></a>
-      <span class="star"> </span>
-      <div class="grid-chain-bottom">
-        <h6><a href="single.html">Lorem ipsum dolor</a></h6>
-        <div class="star-price">
-          <div class="dolor-grid">
-            <span class="actual">300$</span>
-            <span class="reducedfrom">400$</span>
-            <span class="rating">
-              <input type="radio" class="rating-input" id="rating-input-1-5" name="rating-input-1">
-              <label for="rating-input-1-5" class="rating-star1"> </label>
-              <input type="radio" class="rating-input" id="rating-input-1-4" name="rating-input-1">
-              <label for="rating-input-1-4" class="rating-star1"> </label>
-              <input type="radio" class="rating-input" id="rating-input-1-3" name="rating-input-1">
-              <label for="rating-input-1-3" class="rating-star"> </label>
-              <input type="radio" class="rating-input" id="rating-input-1-2" name="rating-input-1">
-              <label for="rating-input-1-2" class="rating-star"> </label>
-              <input type="radio" class="rating-input" id="rating-input-1-1" name="rating-input-1">
-              <label for="rating-input-1-1" class="rating-star"> </label>
-            </span>
-          </div>
-          <a class="now-get get-cart" href="#">ADD TO CART</a>
-          <div class="clearfix"> </div>
-        </div>
-      </div>
-    </div>
-    <div class="clearfix"> </div>
-  </div>
   <div class="clearfix"> </div>
   </div>
   @{ Html.RenderAction("Category", "Home");}
@@ -244,5 +37,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
   <!---->
   @{ Html.RenderAction("Footer", "Home");}
+
+  @RenderSection("footerJS", required: false)
 </body>
 </html>
