Add tag for product

--- a/BaoDatShop/BaoDatShop.Web/Views/Admin/Index.cshtml
+++ b/BaoDatShop/BaoDatShop.Web/Views/Admin/Index.cshtml
@@ -538,6 +538,8 @@
   <script src="~/app/components/product_categories/productCategoryEditController.js"></script>
   <script src="~/app/components/products/productListController.js"></script>
   <script src="~/app/components/home/homeController.js"></script>
+  <script src="~/app/components/products/productEditController.js"></script>
+
 
 </body>
 </html>
