--- a/BaoDatShop/BaoDatShop.Web/app/components/products/productEditView.html
+++ b/BaoDatShop/BaoDatShop.Web/app/components/products/productEditView.html
@@ -1,10 +1,138 @@
-﻿<!DOCTYPE html>
-<html>
-<head>
-    <title></title>
-	<meta charset="utf-8" />
-</head>
-<body>
+﻿  <!-- Content Header (Page header) -->
+<section class="content-header">
+  <h1>
+    Cập nhật sản phẩm
 
-</body>
-</html>
+  </h1>
+  <ol class="breadcrumb">
+    <li><a href="#"><i class="fa fa-dashboard"></i> Trang chủ</a></li>
+    <li><a href="#">Sản phẩm</a></li>
+    <li><a ui-sref="products">Danh sách</a></li>
+    <li class="active">Cập nhật</li>
+  </ol>
+</section>
+<!-- Main content -->
+<section class="content">
+  <!-- Horizontal Form -->
+  <div class="box box-info">
+    <div class="box-header with-border">
+      <h3 class="box-title">{{product.Name}}</h3>
+    </div><!-- /.box-header -->
+    <!-- form start -->
+    <form class="form-horizontal" novalidate name="frmUpdateProduct" role="form" ng-submit="UpdateProduct()">
+      <div class="box-body">
+        <div class="form-group">
+          <label for="inputEmail3" class="col-sm-2 control-label">Tên sản phẩm</label>
+          <div class="col-sm-10">
+            <input type="text" class="form-control" ng-change="GetSeoTitle()" ng-maxlength="256" required name="name" ng-model="product.Name">
+            <span ng-show="frmUpdateProduct.name.$invalid" class="has-error">Phải nhập tên danh mục</span>
+            <span ng-show="frmUpdateProduct.name.$error.maxlength" class="has-error">Tên danh mục chỉ được 256 ký tự</span>
+
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="inputEmail3" class="col-sm-2 control-label">Tiêu đề SEO</label>
+          <div class="col-sm-10">
+            <input type="text" class="form-control" name="alias" required ng-model="product.Alias">
+            <span ng-show="frmUpdateProduct.alias.$invalid" class="has-error">Phải nhập tiêu đề SEO</span>
+            <span ng-show="frmUpdateProduct.alias.$error.maxlength" class="has-error">Tiêu đề SEO chỉ được 256 ký tự</span>
+
+
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="inputEmail3" class="col-sm-2 control-label">Mô tả ngắn</label>
+          <div class="col-sm-10">
+            <input type="text" class="form-control" name="description" ng-maxlength="500" ng-model="product.Description">
+            <span ng-show="frmUpdateProduct.description.$error.maxlength" class="has-error">Mô tả chỉ được 500 ký tự</span>
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="inputEmail3" class="col-sm-2 control-label">Danh mục</label>
+          <div class="col-sm-10">
+            <select name="parentId" required class="form-control" ng-model="product.CategoryID" ng-options="option.ID as option.Name for option in productCategories">
+              <option value="">Chọn danh mục</option>
+            </select>
+            <span ng-show="frmUpdateProduct.CategoryID.$invalid" class="has-error">Phải chọn danh mục</span>
+
+            <input type="hidden" name="parentId" ng-model="product.CategoryID" />
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="inputEmail3" class="col-sm-2 control-label">Bảo hành</label>
+          <div class="col-sm-10">
+            <input type="number" class="form-control" name="warranty" ng-model="product.Warranty">(tháng)
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="inputEmail3" class="col-sm-2 control-label">Giá</label>
+          <div class="col-sm-10">
+            <input type="number" class="form-control" name="price" required ng-model="product.Price">
+            <span ng-show="frmUpdateProduct.price.$invalid" class="has-error">Phải nhập giá</span>
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="inputEmail3" class="col-sm-2 control-label">Giá KM</label>
+          <div class="col-sm-10">
+            <input type="number" class="form-control" name="promotionPrice" ng-model="product.PromotionPrice">
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="inputEmail3" class="col-sm-2 control-label">Hình ảnh</label>
+          <div class="col-sm-10">
+            <input type="text" class="form-control" name="image" ng-model="product.Image">
+            <span ng-show="frmUpdateProduct.image.$error.maxlength" class="has-error">Hình ảnh chỉ được 256 ký tự</span>
+            <button class="btn btn-default" type="button" ng-click="ChooseImage()">Chọn ảnh</button>
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="inputEmail3" class="col-sm-2 control-label">Mô tả sản phẩm</label>
+          <div class="col-sm-10">
+            <textarea class="form-control" name="content" ckeditor="ckeditorOptions" ng-model="product.Content"></textarea>
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="inputEmail3" class="col-sm-2 control-label">Tags</label>
+          <div class="col-sm-10">
+            <input type="text" class="form-control" name="tags" ng-model="product.Tags">
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="inputEmail3" class="col-sm-2 control-label">Meta Keyword</label>
+          <div class="col-sm-10">
+            <input type="text" class="form-control" name="metaKeyword" ng-model="product.MetaKeyword">
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="inputEmail3" class="col-sm-2 control-label">Meta Description</label>
+          <div class="col-sm-10">
+            <textarea class="form-control" name="metaKeyword" ng-model="product.MetaDescription"></textarea>
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="col-sm-offset-2 col-sm-10">
+            <div class="checkbox">
+              <label>
+                <input type="checkbox" name="status" ng-model="product.Status" ng-checked="product.Status"> Kích hoạt
+              </label>
+            </div>
+            <div class="checkbox">
+              <label>
+                <input type="checkbox" name="homeFlag" ng-model="product.HomeFlag" ng-checked="product.HomeFlag"> Hiển thị trang chủ
+              </label>
+            </div>
+            <div class="checkbox">
+              <label>
+                <input type="checkbox" name="hotFlag" ng-model="product.HotFlag" ng-checked="product.HotFlag"> SP Hot
+              </label>
+            </div>
+          </div>
+        </div>
+      </div><!-- /.box-body -->
+      <div class="box-footer">
+        <button ui-sref="product_categories" class="btn btn-default">Hủy</button>
+        <button type="submit" ng-disabled="frmUpdateProduct.$invalid" class="btn btn-success pull-right">Lưu</button>
+      </div><!-- /.box-footer -->
+    </form>
+  </div><!-- /.box -->
+</section><!-- /.content -->
