add product of page user

--- a/BaoDatShop/BaoDatShop.Web/Views/Home/Index.cshtml
+++ b/BaoDatShop/BaoDatShop.Web/Views/Home/Index.cshtml
@@ -87,10 +87,10 @@
         {
           var url = "/" + product.Alias + ".p-" + product.ID + ".html";
             <div class="col-md-4 chain-grid grid-top-chain">
-              <a href="@url">@product.Image</a>
+              <a href="@url"><img class="img-responsive chain" src="@product.Image" /></a>
               <span class="star"> </span>
               <div class="grid-chain-bottom">
-                <h6><a href="single.html">@product.Name</a></h6>
+                <h6><a href="@url">@product.Name</a></h6>
                 <div class="star-price">
                   <div class="dolor-grid">
                     @if (product.PromotionPrice.HasValue)
@@ -129,10 +129,10 @@
        {
          var url = "/" + product.Alias + ".p-" + product.ID + ".html";
           <div class="col-md-4 chain-grid grid-top-chain">
-            <a href="@url">@product.Image</a>
+            <a href="@url"><img class="img-responsive chain" src="@product.Image" /></a>
             <span class="star"> </span>
             <div class="grid-chain-bottom">
-              <h6><a href="single.html">@product.Name</a></h6>
+              <h6><a href="@url">@product.Name</a></h6>
               <div class="star-price">
                 <div class="dolor-grid">
                   @if (product.PromotionPrice.HasValue)
