--- a/BaoDatShop/BaoDatShop.Web/Views/Shared/Header.cshtml
+++ b/BaoDatShop/BaoDatShop.Web/Views/Shared/Header.cshtml
@@ -49,12 +49,12 @@
         <div class="clearfix"> </div>
       </div>
       <div class="header-bottom-right">
-        <div class="account"><a href="login.html"><span> </span>YOUR ACCOUNT</a></div>
+        <div class="account"><a href="login.html"><span> </span>TÀI KHOẢN CỦA BẠN</a></div>
         <ul class="login">
-          <li><a href="login.html"><span> </span>LOGIN</a></li> |
-          <li><a href="register.html">SIGNUP</a></li>
+          <li><a href="/dang-nhap.html"><span> </span>ĐĂNG NHẬP</a></li> |
+          <li><a href="/dang-ky.html">ĐĂNG KÝ</a></li>
         </ul>
-        <div class="cart"><a href="#"><span> </span>CART</a></div>
+        <div class="cart"><a href="/gio-hang.html"><span> </span>GIỎ HÀNG</a></div>
         <div class="clearfix"> </div>
       </div>
       <div class="clearfix"> </div>
