List tag to page product

--- a/BaoDatShop/BaoDatShop.Web/Views/Shared/Layouts.cshtml
+++ b/BaoDatShop/BaoDatShop.Web/Views/Shared/Layouts.cshtml
@@ -13,6 +13,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
   <link href="~/Assets/admin/libs/jquery-ui/themes/smoothness/jquery-ui.min.css" rel="stylesheet" />
   <!--theme-style-->
   <link href="/Assets/client/css/style.css" rel="stylesheet" type="text/css" media="all" />
+  <link href="~/Assets/client/css/custom.css" rel="stylesheet" />
   <!--//theme-style-->
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
