--- a/BaoDatShop/BaoDatShop.Web/app/components/products/productEditView.html
+++ b/BaoDatShop/BaoDatShop.Web/app/components/products/productEditView.html
@@ -86,6 +86,15 @@
           </div>
         </div>
         <div class="form-group">
+          <label for="inputEmail3" class="col-sm-2 control-label">Thêm ảnh</label>
+          <div class="col-sm-10">
+            <ul class="list-inline">
+              <li ng-repeat="img in moreImages"><img ng-src="{{img}}" width="100" /></li>
+            </ul>
+            <button class="btn btn-default" type="button" ng-click="ChooseMoreImage()">Chọn ảnh</button>
+          </div>
+        </div>
+        <div class="form-group">
           <label for="inputEmail3" class="col-sm-2 control-label">Mô tả sản phẩm</label>
           <div class="col-sm-10">
             <textarea class="form-control" name="content" ckeditor="ckeditorOptions" ng-model="product.Content"></textarea>
