Add OutputCache to project...

--- a/BaoDatShop/BaoDatShop.Web/Views/Shared/Footer.cshtml
+++ b/BaoDatShop/BaoDatShop.Web/Views/Shared/Footer.cshtml
@@ -13,7 +13,7 @@
         <div class="clearfix"> </div>
       </div>
       <div class="latter-right">
-        <p>Theo dõi</p>
+        <p>Theo dõi:</p>
         <ul class="face-in-to">
           <li><a href="#"><span> </span></a></li>
           <li><a href="#"><span class="facebook-in"> </span></a></li>
