Add Google Map Api to Website

--- a/BaoDatShop/BaoDatShop.Web/Views/Shared/Header.cshtml
+++ b/BaoDatShop/BaoDatShop.Web/Views/Shared/Header.cshtml
@@ -10,6 +10,12 @@
           <li class="van"><a href="#"><label> </label></a></li>
           <li><a href="#">Free shipping <span class="live">on order over 500</span></a></li>
         </ul>
+        <ul class="support">
+          <li><a href="/gioi-thieu.html">Giới thiệu</a></li>
+        </ul>
+        <ul class="support">
+          <li><a href="/lien-he.html">Liên hệ</a></li>
+        </ul>
         <div class="clearfix"> </div>
       </div>
       <div class="top-header-right">
