--- a/BaoDatShop/BaoDatShop.Web/Assets/client/css/custom.css
+++ b/BaoDatShop/BaoDatShop.Web/Assets/client/css/custom.css
@@ -8,7 +8,7 @@
     color:red;
 }
 
-.register-top-grid input[type="password"], .register-bottom-grid input[type="password"] {
+.register-top-grid input[type="password"], .register-bottom-grid input[type="password"],.login-right input[type="password"] {
     border: 1px solid #EEE;
     outline-color: #FF5B36;
     width: 85%;
