--- a/BaoDatShop/BaoDatShop.Web/app/components/products/productAddView.html
+++ b/BaoDatShop/BaoDatShop.Web/app/components/products/productAddView.html
@@ -93,17 +93,13 @@
         <div class="form-group">
           <label for="inputEmail3" class="col-sm-2 control-label">Hình ảnh</label>
           <div class="col-sm-10">
-
             <button class="btn btn-default" type="button" ng-click="ChooseImage()">Upload image</button>
           </div>
         </div>
         <div class="form-group">
           <label for="inputEmail3" class="col-sm-2 control-label">Thêm ảnh</label>
           <div class="col-sm-10">
-            <ul class="list-inline">
-              <li ng-repeat="img in moreImages"><img ng-src="{{img}}" width="100" /></li>
-            </ul>
-            <button class="btn btn-default" type="button" ng-click="ChooseMoreImage()">Chọn ảnh</button>
+            <button class="btn btn-default" type="button" ng-click="ChooseMoreImage()">Upload multiple images</button>
           </div>
         </div>
         <div class="form-group">
