--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -24,6 +24,7 @@
             <a class="forgot" href="#">Forgot Your Password?</a>
             <input type="submit" value="Login">
     }
+    @Html.Partial("_ExternalLoginsListPartial", new BaoDatShop.Web.Models.ExternalLoginListViewModel { ReturnUrl = ViewBag.ReturnUrl })
   </div>
   <div class="login-left">
     <h3>Chưa có tài khoản</h3>
